--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "sass": "^1.77.6"
+    "sass": "^1.77.6",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "eslint": "^8",
