--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "sass": "^1.77.6",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "swiper": "^11.1.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
